--- a/src/index.less
+++ b/src/index.less
@@ -504,6 +504,10 @@ body {
             }
         }
     }
+
+    #video-camera #vignette {
+        box-shadow: inset 0 0 20px black, inset 0 0 40px rgba(0, 0, 0, 0.6);
+    }
 }
 
 // Mobile portrait
@@ -518,11 +522,14 @@ and (orientation: portrait) {
     }
 
     #video-camera {
-        right: -31vh;
-        bottom: -13vh;
+        right: auto;
+        bottom: auto;
+
+        left: -4%;
+        top: 28%;
 
         #camera-body {
-            height: 80vh;
+            height: 142vw;
         }
     }
 }
@@ -541,8 +548,8 @@ and (orientation: landscape) {
         }
 
         #video-camera {
-            bottom: -24vh;
-            right: -30vh;
+            bottom: -27%;
+            right: -16%;
         }
     }
 
